--- a/Basic/basic3.html
+++ b/Basic/basic3.html
@@ -3,12 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Basic 1</title>
+	<title>Basic 3</title>
 	<link rel="stylesheet" href="">
 </head>
 <body>
-	<p id="result"></p>
-
-	<script src="basic1.js"></script>
+	<p id="index"></p>
+	<p id="values"></p>
+	<p id="both"></p>
+	<script src="basic3.js"></script>
 </body>
 </html>
