--- a/Basic/basic2.html
+++ b/Basic/basic2.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Basic 1</title>
+	<title>Basic 2</title>
 	<link rel="stylesheet" href="">
 </head>
 <body>
+	<p id="name"></p>
 	<p id="result"></p>
-
-	<script src="basic1.js"></script>
+	<script src="basic2.js"></script>
 </body>
 </html>
